<resources>
    <string name="app_name">AndroidCourse</string>
    <string name="close_activity">Close activity</string>
    <string name="contact_image_description">contact image</string>
    <string name="first_and_last_name">%1$s %2$s</string>
    <string name="email_string">Email</string>
    <string name="email_icon">email icon</string>
    <string name="phone_number_string">Phone number</string>
    <string name="phone_icon">phone icon</string>
    <string name="profile_photo_string">profile photo</string>
</resources>
